--- a/reports/ModFit_report_base.Rmd
+++ b/reports/ModFit_report_base.Rmd
@@ -48,7 +48,7 @@ if (grepl("_SeroRev", basename(params$path))) { # catch serorevsion
 #### Log Likelihood & Prior Plot
 ```{r, results='asis', fig.width=7.5, fig.height=5.5}
 modout$mcmcout$output %>%
-  dplyr::filter(rung == "rung1") %>%
+  dplyr::filter(rung == "rung50") %>%
   dplyr::filter(stage == "sampling") %>%
   dplyr::select(c("chain", "iteration", "loglikelihood", "logprior")) %>%
   tidyr::gather(., key = "like", value = "val", 3:4) %>%
@@ -107,7 +107,8 @@ dictkey <- modout$inputs$IFRmodel$IFRdictkey %>%
 #...................... 
 # get ifrs 
 #......................
-ifrs <- COVIDCurve::get_cred_intervals(IFRmodel_inf = modout, whichrung = paste0("rung", 1),
+ifrs <- COVIDCurve::get_cred_intervals(IFRmodel_inf = modout, 
+                                       whichrung = "rung50",
                                        what = "IFRparams", by_chain = FALSE)
 ifrs <- dplyr::left_join(dictkey, ifrs) %>% 
   dplyr::mutate(strata = forcats::fct_reorder(strata, as.numeric(stringr::str_extract(param, "[0-9]+"))))
@@ -138,6 +139,7 @@ crudeplotdat <- crudedat %>%
 # get incidence curve
 #......................
 infxncurve <- COVIDCurve::draw_posterior_infxn_cubic_splines(IFRmodel_inf = modout,
+                                                             whichrung = "rung50",
                                                              dwnsmpl = 1e2,
                                                              by_chain = FALSE, 
                                                              by_strata = TRUE)
@@ -181,7 +183,7 @@ ifrs %>%
 ```{r, results='asis', fig.height=3, fig.width=8}
 # overall
 COVIDCurve::get_overall_IFR_cred_intervals(IFRmodel_inf = modout, 
-                                         whichrung = "rung1", 
+                                         whichrung = "rung50", 
                                          whichstandard = "arpop",
                                          by_chain = FALSE) %>% 
   dplyr::mutate_if(is.numeric, round, 4) %>% 
@@ -189,7 +191,7 @@ COVIDCurve::get_overall_IFR_cred_intervals(IFRmodel_inf = modout,
 
 # by chain
 COVIDCurve::get_overall_IFR_cred_intervals(IFRmodel_inf = modout, 
-                                         whichrung = "rung1", 
+                                         whichrung = "rung50", 
                                           whichstandard = "arpop",
                                          by_chain = TRUE) %>% 
   dplyr::mutate_if(is.numeric, round, 4) %>% 
@@ -203,7 +205,7 @@ demogwi <- modout$inputs$IFRmodel$demog %>%
   dplyr::mutate(wi = popN/sum(popN))
 
 modout$mcmcout$output %>%
-  dplyr::filter(stage == "sampling" & rung == "rung1") %>%
+  dplyr::filter(stage == "sampling" & rung == "rung50") %>%
   tidyr::pivot_longer(., cols = modout$inputs$IFRmodel$IFRparams, # if chain isn't included in vector, grepl won't do anything
                       names_to = "Strata", values_to = "est") %>%
   dplyr::left_join(., demogwi, by = "Strata") %>%
@@ -230,6 +232,7 @@ demog <- demog %>%
   dplyr::left_join(., dictkey)
 
 seropnts <- COVIDCurve::draw_posterior_sero_curves(IFRmodel_inf = modout,
+                                                   whichrung = "rung50",
                                                    dwnsmpl = 1e2,
                                                    by_chain = F)
 
@@ -311,6 +314,7 @@ deathrecast <- lapply(proplist,
 # get posterior draws
 #......................
 postdat <- COVIDCurve::posterior_check_infxns_to_death(IFRmodel_inf = modout,
+                                                       whichrung = "rung50",
                                                        dwnsmpl = 1e2,
                                                        by_chain = FALSE)
 postdat_long <- postdat %>%
@@ -360,13 +364,16 @@ plot(ppc_plot)
 #### Additional Parameters
 ```{r}
 # knots ifrs 
-knots <- COVIDCurve::get_cred_intervals(IFRmodel_inf = modout, whichrung = paste0("rung", 1),
+knots <- COVIDCurve::get_cred_intervals(IFRmodel_inf = modout, 
+                                        whichrung = "rung50",
                                         what = "Knotparams", by_chain = FALSE)
 
-ypos <- COVIDCurve::get_cred_intervals(IFRmodel_inf = modout, whichrung = paste0("rung", 1),
+ypos <- COVIDCurve::get_cred_intervals(IFRmodel_inf = modout, 
+                                       whichrung = "rung50",
                                        what = "Infxnparams", by_chain = FALSE)
 
-nes <-  COVIDCurve::get_cred_intervals(IFRmodel_inf = modout, whichrung = paste0("rung", 1),
+nes <-  COVIDCurve::get_cred_intervals(IFRmodel_inf = modout, 
+                                       whichrung = "rung50",
                                        what = "Noiseparams", by_chain = FALSE)
 
 addparams <- dplyr::bind_rows(knots, ypos, nes)
